try to fix weird error